<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mainVM"
            type="com.assignment.userregistration.viewModel.UserInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/custom_toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_edu_info"
                    style="@style/MyTextView"
                    android:textSize="22sp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/edu_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_education"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/education"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_edu_info" />


                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/editTextEducation"
                    style="@style/editTextStyle"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="textAutoComplete"
                    android:longClickable="false"
                    android:text="@={mainVM.qualification}"

                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/select_qualification"
                    android:drawableEnd="@drawable/ic_down_arrow"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_education" />


                <TextView
                    android:id="@+id/tv_passing_year"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"

                    android:text="@string/year_of_passing"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextEducation" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/editTextPassingYear"
                    style="@style/editTextStyle"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="textAutoComplete"
                    android:longClickable="false"
                    android:focusableInTouchMode="true"
                    android:layout_width="match_parent"
                    android:text="@={mainVM.yearOfPassing}"

                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/dp10"
                    android:hint="@string/hint_year_of_passing"
                    android:drawableEnd="@drawable/ic_down_arrow"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_passing_year"/>


                <TextView
                    android:id="@+id/tv_grade"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/grade"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPassingYear" />

                <EditText
                    android:id="@+id/editTextGrade"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ01234567890"
                    android:hint="@string/grade_percent_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:text="@={mainVM.grade}"

                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_grade" />

                <View
                    android:id="@+id/view_line"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_marginStart="@dimen/dp35"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp35"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextGrade" />

                <TextView
                    android:id="@+id/tv_Prof_info"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/prof_info"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view_line" />


                <TextView
                    android:id="@+id/tv_experience"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/experience"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_Prof_info" />

                <EditText
                    android:id="@+id/editTextExperience"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/rect_round_edittext"
                    android:hint="@string/enter_experience_hint"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:text="@={mainVM.experience}"

                    android:inputType="number"
                    android:maxLength="2"
                    android:padding="@dimen/dp10"
                    android:singleLine="true"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_experience" />

                <TextView
                    android:id="@+id/tv_designation"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/designation"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextExperience" />

                <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/editTextDesignation"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/enter_designation"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:drawableEnd="@drawable/ic_down_arrow"
                    android:clickable="false"
                    android:focusable="false"
                    android:text="@={mainVM.designation}"

                    android:inputType="textAutoComplete"
                    android:longClickable="false"
                    android:focusableInTouchMode="true"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_designation" />


                <TextView
                    android:id="@+id/tv_domain"
                    style="@style/MyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp10"
                    android:text="@string/domain"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDesignation" />

                <EditText
                    android:id="@+id/editTextDomain"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp5"
                    android:background="@drawable/rect_round_edittext"
                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789"
                    android:hint="@string/enter_domain"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:text="@={mainVM.domain}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_domain" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/ButtonPrevious"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp35"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginBottom="@dimen/dp20"
                    android:background="@drawable/previous_button"
                    android:text="@string/previous"
                    android:textAlignment="center"
                    android:textColor="@color/darkOrange"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/buttonNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDomain" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonNext"
                    android:layout_width="0dp"
                    android:layout_marginBottom="@dimen/dp20"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp20"
                    android:layout_marginTop="@dimen/dp20"
                    android:layout_marginEnd="@dimen/dp35"
                    android:background="@color/darkOrange"
                    android:text="@string/button_next"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:onClick="@{(view) -> mainVM.onEduNextClick(view)}"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/ButtonPrevious"
                    app:layout_constraintTop_toBottomOf="@+id/editTextDomain" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>