<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   >
    <data>
        <variable
            name="mainVM"
            type="com.assignment.userregistration.viewModel.UserInfoViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:id="@+id/include"
            layout="@layout/custom_toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include">


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextAddress"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_address"
                android:hint="@string/hint_address"

                android:text="@={mainVM.address}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextLandMark"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="@dimen/dp20"
                android:drawableStart="@drawable/ic_address"
                android:hint="@string/hint_landmark"
                android:text="@={mainVM.landmark}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextCity"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:hint="@string/hint_city"
                android:text="@={mainVM.city}"

                android:drawableStart="@drawable/ic_address"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextLandMark" />

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/editTextState"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:hint="@string/hint_state"
                android:clickable="false"
                android:focusable="false"
                android:text="@={mainVM.state}"

                android:inputType="textAutoComplete"
                android:longClickable="false"
                android:focusableInTouchMode="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextCity" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextpinCode"
                style="@style/editTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:drawableStart="@drawable/ic_address"
                android:hint="@string/hnit_pincode"
                android:text="@={mainVM.pinCode}"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextState" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp35"
                android:background="@color/darkOrange"
                android:gravity="center"
                android:text="@string/button_submit"
                android:onClick="@{(view) -> mainVM.onSubmitClick(view)}"

                android:id="@+id/buttonSubmit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextpinCode" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>